Fixed low dpi screen (blurred) and centered chords in desktop

--- a/style.css
+++ b/style.css
@@ -396,7 +396,7 @@ select#ddlInstrument:focus, select#ddlTuning:focus ,select#ddlScale:focus, selec
     max-width: 90%;
     margin: 2em auto auto auto;
     border-radius: 0.65em; */
-    justify-content: space-between;
+    justify-content: center;
   }
   
 
